fix issues #2